fix: adjust header positioning for full-bleed effect in Home.css

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -362,8 +362,8 @@
   .header-wrapper {
     position: relative;
       /* make the header full-bleed (edge-to-edge) while kept inside the centered container */
-      left: -33%;
-      right: -33%;
+      left: 30%;
+      /* right: -33%; */
 
 background-image: url('/logo2.png');
 background-position: center;
